--- a/5-inject/cash-flow/package.json
+++ b/5-inject/cash-flow/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cash-flow",
-  "version": "5.4.0",
-  "description": "Flujo de datos entre componentes Angular",
+  "version": "5.5.0",
+  "description": "Servicios inyectables en Angular",
   "homepage": "http://academia-binaria.com/base-aplicacion-angular/",
   "author": {
     "name": "Alberto Basalo",
