--- a/2-spa/cash-flow/package.json
+++ b/2-spa/cash-flow/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cash-flow",
   "version": "5.2.0",
-  "description": "Páginas y rutas Angular SPA",
+  "description": "Pages and routes with Angular SPA",
   "homepage": "http://academia-binaria.com/paginas-y-rutas-angular-spa/",
   "author": {
     "name": "Alberto Basalo",
@@ -18,25 +18,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/animations": "^5.2.0",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "milligram": "^1.3.0",
-    "moment": "^2.19.1",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "moment": "^2.20.1",
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
-    "typescript": "~2.4.2"
+    "@angular/cli": "1.6.6",
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/language-service": "^5.2.0",
+    "typescript": "~2.5.3"
   }
 }
