--- a/5-inject/cash-flow/package.json
+++ b/5-inject/cash-flow/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cash-flow",
   "version": "5.5.0",
-  "description": "Servicios inyectables en Angular",
-  "homepage": "http://academia-binaria.com/categories/Tutorial/Angular/",
+  "description": "Injectable services with Angular",
+  "homepage": "https://academia-binaria.com/servicios-inyectables-en-Angular/",
   "author": {
     "name": "Alberto Basalo",
     "url": "https://twitter.com/albertobasalo"
@@ -18,25 +18,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/animations": "^5.2.0",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "milligram": "^1.3.0",
-    "moment": "^2.19.1",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "moment": "^2.20.1",
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
-    "typescript": "~2.4.2"
+    "@angular/cli": "1.6.6",
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/language-service": "^5.2.0",
+    "typescript": "~2.5.3"
   }
 }
