--- a/3-data/cash-flow/package.json
+++ b/3-data/cash-flow/package.json
@@ -2,8 +2,7 @@
   "name": "cash-flow",
   "version": "5.3.0",
   "description": "Forms, lists and data models with Angular",
-  "homepage":
-    "https://academia-binaria.com/formularios-tablas-y-modelos-de-datos-en-angular/",
+  "homepage": "https://academia-binaria.com/formularios-tablas-y-modelos-de-datos-en-angular/",
   "author": {
     "name": "Alberto Basalo",
     "url": "https://twitter.com/albertobasalo"
